Resolves: tdf#164239 Can force Y-M-D to ISO 8601 if no date acceptance pattern

... was matched at all, even for a-b-c with MDY a<=12 or DMY a<=31.

Change-Id: Ie2d62c73c91794a96114b787d6ad2357c7affb2a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178171
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 47b4b1633a08dd4c97d66feabe8cd3290074dc0f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178174
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>